Changing some layout issues

--- a/roofing.css
+++ b/roofing.css
@@ -33,15 +33,6 @@
 }
 
 
-/* Gallery section styles */
-
-
-.col-sm-8 h2 {
-  font-size: 28px;
-  font-weight: bold;
-}
-
-
 
 .img-fluid {
   max-width: 100%;
